html/css/esdc.css
html, body, main, .section {
  display: block;
  background-color: black;
  color: #999;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 5;
}

footer {
  display: block;
  width: 100%;
  position: fixed;
  bottom: 0;
  padding: 0;
  margin: 0;
  border-top: 1px solid #888;
  z-index: 3;
  background-color: rgba(0, 0, 0, 0.8);
}

.footer {
  width: 100%;
  margin: 0 auto; 
  text-align: center;
}

.footer a:hover {
  box-shadow: 0 1px;
}

.footer p {
  margin-bottom: 6px;
  margin-top: 6px;
}

.socka {
  font-size: 16px;
}

.copyright {
  font-size: 12px;
}

.logo {
  float: left;
  margin-top: 6px;
}

.section {
  border-top: 1px solid #888;
}

.section#home {
  background: black url('../img/backgrounds/dc03.jpg') no-repeat center center fixed;
  background-size: cover;
}

.section#about {
  background: black url('../img/backgrounds/geek.jpg') no-repeat center center fixed;
  background-size: cover;
}

.section#features {
  background: black url('../img/backgrounds/facility.jpg') no-repeat center center fixed;
  background-size: cover;
}

.hero {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  min-height: 300px;
  color: #bbb;
  padding: 0;
}

.hero.esdc-logo {
  background: rgba(0,0,0,0.2) url('../img/danubecloud-logo-inv.svg') no-repeat center center fixed;
  background-size: contain;
}

.hero .content {
  position: relative;
  top: 100px;
}

.content-text {
  text-align: justify;
  width: 60%;
  margin: 0 auto; 
  background-color: rgba(0,0,0,0.8);
  color: #ddd;
  padding: 40px 10px;
}

.section#features .content-text {
  text-align: left;
  padding-top: 10px;
  padding-bottom: 10px;
}

#screenshots {
  padding-top: 20px;
  padding-left: 30px;
}

#screenshots a {
  margin: 5px;
}

#screenshots img {
  border: 1px solid #444;
}

nav.transparent {
  background: none;
  box-shadow: none;
  border-bottom: 1px solid #888;
  z-index: 3;
  background-color: rgba(0, 0, 0, 0.9);
}

nav.transparent .brand {
  color: #ccc;
}

nav.transparent .pseudo.button {
  color: inherit;
}

nav.transparent .pseudo.button:hover {
  color: #0074d9;
  box-shadow: inset 0 0 0 99em rgba(177,177,177,0.3);
}

nav.transparent .pseudo.button.active {
  color: #0074d9;
}

@media (max-width: 60em) {
  nav .burger ~ .menu {
    background-color: #111;
  }
  .content-text {
    width: 80%;
    padding-bottom: 110px;
    padding-top: 0;
  }
}

@media (max-width: 30em), (max-height: 35em) {
  footer {
    position: static;
    background-color: black;
  }
  .hero .content {
    position: static;
  }
  .section {
    height: auto;
  }
}

